--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ environment_variables:
         "INPUT_FILE": "saml.yaml"
         "S3_BUCKET": ""
 phases:
-    during_build:
+    build:
         commands:
             - npm install
             - aws cloudformation package --template $INPUT_FILE --s3-bucket $S3_BUCKET --output-template post-saml.yaml
